Remove old check